Add more styles

--- a/styles/header.css
+++ b/styles/header.css
@@ -1,3 +1,6 @@
+.header {
+  margin: 40px;
+}
 .header-menu-nav {
   display: flex;
   justify-content: space-around;
@@ -7,11 +10,8 @@
   display: flex;
   list-style-type: none;
 }
-.header-menu-nav-list-item::after {
-  content: "";
-  width: 1px;
-  height: 100px;
-  background-color: #000;
+.header-menu-nav-list-item {
+  margin-left: 20px;
 }
 .header-menu-nav-list-item-link {
   text-decoration: none;
@@ -22,6 +22,12 @@
   text-align: left;
   color: #111111;
   font-family: "Outfit", sans-serif;
+}
+.header-menu-nav-list-item-link::after {
+  content: "";
+  background-color: #111111;
+  border: 1px solid;
+  margin-left: 20px;
 }
 .header-menu-nav-list-item-select {
   border: none;
@@ -36,6 +42,23 @@
   font-family: "Outfit", sans-serif;
 }
 .header .search-input {
-  width: 37rem;
-  height: 5rem;
+  width: 370px;
+  height: 37px;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 26px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: #3a6150;
+  border: 2px solid #3a6150;
+  font-family: "Outfit", sans-serif;
+  padding-left: 15px;
+  position: relative;
+}
+.header .search-input-img {
+  position: absolute;
+  background-color: #3a6150;
+  width: 42px;
+  height: 37px;
+  border: 3px solid #3a6150;
 }/*# sourceMappingURL=header.css.map */
