--- a/styles/mixins.scss
+++ b/styles/mixins.scss
@@ -1,3 +1,5 @@
+@import "variables.scss";
+
 @mixin text {
     font-size: 18px;
     font-weight: 400;
@@ -5,6 +7,5 @@
     letter-spacing: 0em;
     text-align: left;
     color: #111111;
-    font-family: "Outfit", sans-serif;
-
+    font-family: $font-outfit;
 }
