--- a/styles/main.scss
+++ b/styles/main.scss
@@ -4,6 +4,8 @@
 @import "variables.scss";
 @import "mainSection.scss";
 @import "section.scss";
+@import "form.scss";
+@import "footer.scss";
 
 *,
 *::after,
