--- a/styles/mainSection.css
+++ b/styles/mainSection.css
@@ -7,6 +7,16 @@
   background-repeat: no-repeat;
   background-size: cover;
 }
+@media screen and (max-width: 985px) {
+  .div-main-section {
+    flex-wrap: wrap;
+  }
+}
+@media screen and (max-width: 985px) {
+  .div-main-section-img img {
+    max-width: 50%;
+  }
+}
 .div-main-section-block {
   margin-right: 25px;
 }
@@ -30,7 +40,7 @@
   margin-top: 15px;
 }
 .div-main-section-block-text {
-  font-family: Helvetica;
+  font-family: Helvetica, sans-serif;
   font-size: 14px;
   font-weight: 400;
   line-height: 21px;
@@ -41,17 +51,21 @@
   margin-top: 10px;
 }
 .div-main-section-block-button {
-  width: 200px;
-  height: 50px;
-  background-color: #3A6150;
-  color: #fff;
+  margin-top: 40px;
   font-family: "Outfit", sans-serif;
   font-size: 18px;
   font-weight: 400;
   line-height: 27px;
   letter-spacing: 0em;
-  text-align: left;
   border: 1px solid #3A6150;
   text-align: center;
-  margin-top: 40px;
+  width: 200px;
+  height: 50px;
+  background-color: #3A6150;
+  color: #fff;
+}
+@media screen and (max-width: 985px) {
+  .div-main-section-block-button {
+    margin-bottom: 30px;
+  }
 }/*# sourceMappingURL=mainSection.css.map */
