--- a/styles/mainSection.scss
+++ b/styles/mainSection.scss
@@ -1,4 +1,5 @@
 @import "variables.scss";
+@import "mixins.scss";
 
 .div-main {
   &-section {
@@ -10,6 +11,16 @@
     background-color: #f9f9f9;
     background-repeat: no-repeat;
     background-size: cover;
+    @media screen and (max-width: 985px) {
+      flex-wrap: wrap;
+    }
+    &-img {
+      img {
+        @media screen and (max-width: 985px) {
+          max-width: 50%;
+        }
+      }
+    }
     &-block {
       margin-right: 25px;
       &-title {
@@ -22,17 +33,12 @@
         font-family: $font-outfit;
       }
       &-subtitle {
-        font-family: $font-outfit;
-        font-size: 24px;
-        font-weight: 500;
-        line-height: 29px;
-        letter-spacing: 0em;
-        text-align: left;
+        @include subtitle;
         color: $text-color;
         margin-top: 15px;
       }
       &-text {
-        font-family: Helvetica;
+        font-family: Helvetica, sans-serif;
         font-size: 14px;
         font-weight: 400;
         line-height: 21px;
@@ -43,19 +49,11 @@
         margin-top: 10px;
       }
       &-button {
-        width: 200px;
-        height: 50px;
-        background-color: $text-color;
-        color: #fff;
-        font-family: $font-outfit;
-        font-size: 18px;
-        font-weight: 400;
-        line-height: 27px;
-        letter-spacing: 0em;
-        text-align: left;
-        border: 1px solid $text-color;
-        text-align: center;
         margin-top: 40px;
+        @include button;
+        @media screen and (max-width: 985px) {
+          margin-bottom: 30px;
+        }
       }
     }
   }
