--- a/styles/mixins.scss
+++ b/styles/mixins.scss
@@ -1,11 +1,54 @@
 @import "variables.scss";
 
 @mixin text {
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 27px;
-    letter-spacing: 0em;
-    text-align: left;
-    color: #111111;
-    font-family: $font-outfit;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 27px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: #111111;
+  font-family: $font-outfit;
+}
+
+@mixin font {
+  font-family: $font-outfit;
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 58px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+
+@mixin button {
+  font-family: $font-outfit;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 27px;
+  letter-spacing: 0em;
+  border: 1px solid $text-color;
+  text-align: center;
+  width: 200px;
+  height: 50px;
+  background-color: $text-color;
+  color: #fff;
+}
+
+@mixin subtitle {
+  font-family: $font-outfit;
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 29px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+
+@mixin link {
+  text-decoration: none;
+  font-family: $font-outfit;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 27px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: #111;
 }
