Fixed perfomance issues

--- a/styles/footer.scss
+++ b/styles/footer.scss
@@ -135,7 +135,7 @@
           line-height: 20px;
           letter-spacing: 0em;
           text-align: left;
-          color: #11111180;
+          color: #111;
           text-decoration: none;
         }
       }
