--- a/styles/form.scss
+++ b/styles/form.scss
@@ -114,13 +114,17 @@
           padding-bottom: 10px;
         }
 
-        input {
+        textarea {
           max-width: 890px;
           width: 100%;
           height: 104px;
           border-radius: 3px;
           padding-left: 5px;
-          padding-bottom: 50px;
+          padding-top: 10px;
+          font-family: $font-outfit;
+          resize: none;
+
+
           @media screen and (max-width: 985px) {
             max-width: 600px;
             width: 100%;
