--- a/styles/main.css
+++ b/styles/main.css
@@ -332,16 +332,18 @@
   text-align: left;
   padding-bottom: 10px;
 }
-.form-table-info-message input {
+.form-table-info-message textarea {
   max-width: 890px;
   width: 100%;
   height: 104px;
   border-radius: 3px;
   padding-left: 5px;
-  padding-bottom: 50px;
+  padding-top: 10px;
+  font-family: "Outfit", sans-serif;
+  resize: none;
 }
 @media screen and (max-width: 985px) {
-  .form-table-info-message input {
+  .form-table-info-message textarea {
     max-width: 600px;
     width: 100%;
   }
@@ -707,7 +709,7 @@
   line-height: 20px;
   letter-spacing: 0em;
   text-align: left;
-  color: rgba(17, 17, 17, 0.5019607843);
+  color: #111;
   text-decoration: none;
 }
 .footer hr {
